--- a/site/src/components/assets/scss/pages/pages_objet/_page_objet-phone.scss
+++ b/site/src/components/assets/scss/pages/pages_objet/_page_objet-phone.scss
@@ -10,11 +10,8 @@
 	.page-activity{
 
 		main{
-			margin-left: $margins-phone;
-			margin-right: $margins-phone;
-			margin-bottom: 40vh;
 
-			margin: $height-top-bar-phone $margins-phone;
+			margin: $height-top-bar-phone 0;
 
 			
 	
